--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/IskrenStanislavov/ninja#readme",
   "dependencies": {
     "gulp": "^3.9.1",
+    "vorlon": "^0.2.1",
     "your-game-name-here": "git+https://github.com/IskrenStanislavov/node-online-game-template.git"
   }
 }
