--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "devDependencies": {},
   "dependencies": {
     "browser-sync": "^2.10.0",
-    "hxpixijs": "0.0.25"
     "gulp": "^3.9.1",
+    "hxpixijs": "0.0.25",
+    "realtime-multiplayer-in-html5": "^1.1.0",
     "vorlon": "^0.2.1",
     "your-game-name-here": "git+https://github.com/IskrenStanislavov/node-online-game-template.git"
   }
