--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {},
   "dependencies": {
     "browser-sync": "^2.10.0",
+    "gsap": "git+https://github.com/greensock/GreenSock-JS.git",
     "gulp": "^3.9.1",
     "hxpixijs": "0.0.25",
     "pixi.js": "^3.0.11",
