--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hxpixijs": "0.0.25",
     "pixi.js": "^3.0.11",
     "realtime-multiplayer-in-html5": "^1.1.0",
+    "socket.io": "^1.5.1",
     "vorlon": "^0.2.1",
     "your-game-name-here": "git+https://github.com/IskrenStanislavov/node-online-game-template.git",
     "zepto": "^1.0.1"
